# js-dos-ttd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mp32ogg.pl  server-patch.md  suite.pl
PlayTTD-Web/: MANIFEST  Makefile.PL  config.yml  i18n.yaml
PlayTTD-Web/lib/File/: ReadBackwards.pm
PlayTTD-Web/lib/PlayTTD/: Achievement.pm  Customize.pm  Index.pm  Jukebox.pm  Login.pm  Multiplayer.pm  OpenTTD.pm  PerformanceTest.pm  Play.pm  Player.pm  Pre.pm  Save.pm  Status.pm  Web.pm
PlayTTD-Web/public/: 404.html  500.html  openttd.data  openttd.js  robots.txt
PlayTTD-Web/public/commons/css/: commons.css  header.css
PlayTTD-Web/public/css/: style.css
PlayTTD-Web/public/css/jukebox/: jplayer.blue.monday.css  jukebox.css
PlayTTD-Web/public/javascripts/: blitter.js  common.js  cookie.js  game.js  pre.js  test.js
PlayTTD-Web/public/legacy/stylesheets/: style.css
PlayTTD-Web/public/stylesheets/: empty.css  styles.css
PlayTTD-Web/t/: 001_base.t  002_index_route.t
PlayTTD-Web/views/: customize.tt  index.tt  jukebox.tt  login.tt  multiplayer-forbidden.tt  performance-test.tt  play.tt
PlayTTD-Web/views/layouts/: empty.tt  jukebox.tt  main.tt
canvas-perfomance/: drawImageRender.js  image.js  index.html  putImageRender.js
etc/: perfomance  pre.js  preload.tar.lzma
etc/html/: iframe.html  index.html  jukebox.html  perfomance_test.html  play_just_now.html  style-iframe.css  style.css
etc/html/css/: primal_style.css  style.css
etc/html/css/jukebox/: jukebox.css
etc/html/evolution/css/: style.css
etc/html/img/: play-ttd.xcf
etc/html/js/: common.js  game.js  pre.js  test.js
etc/src/: fgxinit_patched.cpp
etc/src/music/: em_midi.cpp  extmidi.cpp  extmidi.h
etc/video/: sdl_v_patched.cpp
lib/: EMMakePatcher.pm
res_src/: README.md
src/: emmidi.cpp  js-dos-ttd.patch
ttd-emscripten/src/: gfx.cpp  openttd.cpp
ttd-emscripten/src/blitter/: 8bpp_optimized.cpp
ttd-emscripten/src/music/: em_midi.cpp  em_midi.h
ttd-emscripten/src/video/: sdl_v.cpp
ttd-patch/src/: fios_gui.cpp  openttd.cpp
ttd-patch/src/music/: em_midi.h
ttd-patch/src/network/: network.cpp
ttd-patch/src/network/core/: address.cpp  address.h  tcp.cpp
ttd-patch/src/video/: sdl_v.cpp
